--- a/mychar.ini
+++ b/mychar.ini
@@ -1,9 +1,9 @@
 
 
 ;规则集定义
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/qichiyuhub/rule/master/Direct.list
-ruleset=🚀 节点选择,https://raw.githubusercontent.com/qichiyuhub/rule/master/ProxyLite.list
-ruleset=🤖 AI,https://raw.githubusercontent.com/qichiyuhub/rule/master/AI.list
+ruleset=🎯 全球直连,https://github.com/mychar1/list/blob/main/Direct.list
+ruleset=🚀 节点选择,https://github.com/mychar1/list/blob/main/ProxyLite.list
+ruleset=🤖 AI,https://github.com/mychar1/list/blob/main/AI.list
 
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
